--- a/assets/scss/base/_reset.scss
+++ b/assets/scss/base/_reset.scss
@@ -1,5 +1,5 @@
-body {
-  color: $color-white;
-  font-family: $font-loos-thin;
-  background: $color-black;
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
 }
