:construction: setup routes

--- a/assets/scss/base/_txt.scss
+++ b/assets/scss/base/_txt.scss
@@ -7,11 +7,11 @@ h6 {
   font-family: $font-inter;
 }
 h1 {
-  font-size: clamp(2rem, 4vw, 4rem);
-  font-weight: $font-semi-bold;
+  font-size: clamp(5rem, 9vw, 8rem);
+  font-weight: $font-bold;
 }
 h2 {
-  font-size: clamp(1.5rem, 3vw, 3rem);
+  font-size: clamp(4rem, 8vw, 7rem);
   font-weight: $font-semi-bold;
 }
 h3 {
