--- a/assets/scss/base/_txt.scss
+++ b/assets/scss/base/_txt.scss
@@ -7,19 +7,23 @@ h6 {
   font-family: $font-inter;
 }
 h1 {
-  font-size: clamp(5rem, 9vw, 8rem);
+  font-size: clamp(3rem, 7vw, 5rem);
+  line-height: clamp(3.2rem, 7vw, 5.4rem);
   font-weight: $font-bold;
 }
 h2 {
-  font-size: clamp(4rem, 8vw, 7rem);
+  font-size: clamp(2.5rem, 6vw, 4rem);
+  line-height: clamp(2.5rem, 6vw, 4rem);
   font-weight: $font-semi-bold;
 }
 h3 {
   font-size: clamp(2rem, 5vw, 5rem);
+  line-height: clamp(2rem, 5vw, 5rem);
   font-weight: $font-bold;
 }
 h4 {
   font-size: clamp(1.5rem, 3vw, 3rem);
+  line-height: clamp(1.5rem, 3vw, 3rem);
   font-weight: $font-bold;
 }
 p {
