:lipstick: imrpove header style

--- a/assets/scss/base/_txt.scss
+++ b/assets/scss/base/_txt.scss
@@ -32,6 +32,11 @@ p {
   font-weight: $font-regular;
 }
 
+a {
+  font-family: $font-inter;
+  font-weight: $font-regular;
+}
+
 .font-michroma {
   font-family: $font-michroma;
 }
