:construction: Page Project

--- a/assets/scss/abstracts/_functions.scss
+++ b/assets/scss/abstracts/_functions.scss
@@ -1,10 +1,8 @@
-// @keyframes bounce-loader {
-//   0%, 100% {
-//     transform: translateY(-10%);
-//     animation-timing-function: cubic-bezier(0.8,0,1,1);
-//   }
-//   50% {
-//     transform: none;
-//     animation-timing-function: cubic-bezier(0,0,0.2,1);
-//   }
-// }
+@keyframes spin-circle {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
